[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/assets/door1.png" type="Texture" id=1]
[ext_resource path="res://scenes/TransitionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/LevelComplete.gd" type="Script" id=3]
[ext_resource path="res://resources/sfx/level_complete.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="LevelComplete" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="TransitionScreen" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
[connection signal="body_entered" from="." to="." method="_on_LevelComplete_body_entered"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
